[package]
name = "bad-apple-rs"
version = "0.1.0"
edition = "2021"

[dependencies.fbgl]
features = ["fbdev", "img"]
git = "https://github.com/abc123me/fbgl-rs.git"
branch = "master"

[dependencies.clap]
features = ["derive"]
version = "4.5.56"

[dependencies]
crossbeam = "0.8.4"
framebuffer = "0.3.1"
image = "0.25.9"
rodio = "0.21.1"
